<resources>
    <string name="app_name">Custo de Viagem</string>
    <string name="hint_distancia">Distância</string>
    <string name="total_de_quilometros">Total de quilômetros</string>
    <string name="hint_preco">Preço</string>
    <string name="preco_por_litro">Preço por litro</string>
    <string name="hint_autonomia">Autonomia</string>
    <string name="kms_por_litro">KMs por litro</string>
    <string name="gasto_total">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="button_calcular">Calcular</string>
    <string name="warning">Todos os campos devem ser preenchidos!</string>
    <string name="expense_placeholder_text">R$ 0,00</string>
</resources>