<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        tools:title="Custo de Viagem" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_view_distancia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_distancia"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/total_de_quilometros" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_view_preco"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_preco"
                    android:inputType="numberDecimal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/preco_por_litro" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_view_autonomia"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/hint_autonomia"
                    android:inputType="numberDecimal"
                    android:maxWidth="488dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/kms_por_litro" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/gasto_total" />

            <TextView
                android:id="@+id/text_view_valor_gasto_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="18dp"
                android:textSize="36sp"
                android:textColor="?attr/colorPrimaryDark"
                tools:text="R$ 0,00" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorButtonNormal"
                android:maxWidth="320dp"
                android:text="@string/button_calcular"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>